# microelectronics

./: .gitignore  README.md  micro_speech.uf2
8bit/docs/: README.md
8bit/kits/: README.md
Components/: README.md
Components/CLB/: README.md
Components/FPGA/: README.md
Components/HW-Accelerator/: README.md
Components/HardwareAccelerators/: README.md
Components/discrete/: README.md
Components/nodes/: README.md
Design/: README.md
Design/FABulous/: README.md
Design/HDL/: README.md
Design/OpenLane/: README.md
Design/PCB/: README.md
Design/Packaging/: README.md
Design/Transmission/: README.md
Design/VTR/: README.md
Design/chip/: README.md
Design/pcb/: README.md
EDA/DFM/: README.md
EDA/Simulation/: README.md
EDA/stepFPGA/: README.md
FPGA/: README.md
FPGA/q&a/: README.md
Fab/: README.md
Fab/EfabLess/: README.md
Fab/eda/: README.md
Fab/ihp-microelectronics/: README.md
Gears/MMIC/: README.md
Gears/display/: README.md
Gears/fpga/: README.md
NGSPICE/: rc_filter.cir
Q&A/usage/: README.md
Simulation/stepFPGA/: README.md
Simulation~/: README.md
Theory/: README.md
Theory/Voltage/: README.md
Transistors/: README.md
boards/NUCLEO-F446RE/: README.md
books/ISBN-001433473/: README.md
books/ISBN-0070125910/: README.md
books/ISBN-9781260597783/: README.md
books/ISBN-9781630818487/: README.md
books/ISBN-9781911531425/: README.md
business/: README.md
courses/: LOOSE.md  README.md
courses/0.loose/: README.md
courses/2.semiconductors/: LOOSE.md  README.md
courses/4.YouTube/: README.md
courses/@eapplications/: README.md
courses/ChanCarusone/: README.md
courses/Institutions/: README.md
courses/KhanAcademy/: README.md
creators/: README.md
eda/: README.md
fablab/: README.md
foundry/: README.md
fpga/: INDEX.HTM  INFO_UF2.TXT  README.md
fpga1/: README.md
ic/: README.md
instruments/: README.md
kits/: README.md
lang/: README.md
lang/c/tedrossin/TftGuiSimple/: .gitignore  CMakeLists.txt  README.md
lang/rust/tft_lcd/: Cargo.toml  README.md  consecutive_fails.md  projects
lang/rust/tft_lcd/src/: main.rs  second.rs
lcd/: README.md  SPI.md
legal/: README.md
mcu/: README.md
nanotech/: README.md
notable/: README.md
oscilloscope/: README.md
pcb/: README.md
sbc/: README.md
tools/: README.md  review.txt
(+776 files in other folders)
