[package]
name = "tft_lcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.0"
embedded-hal = "0.2.7"
fugit = "0.3.7"
mipidsi = "0.7.1"
panic-halt = "0.2.0"
rp-pico = "0.7.0"
